<resources>
    <string name="app_name">PATO</string>

    <string name="don_t_have_an_account">Don\'t Have An Account?</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">already_have_an_account</string>
    <string name="datails_image">datails image</string>
    <string name="sign_in">Sign In</string>
</resources>